--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,8 @@
 @import "base/_buttons";
 @import "base/_icons";
 
-
+@import "blocks/_menu-toggle";
+@import "blocks/_mobile-menu";
 //sections
 
  @import "sections/header"
