--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,9 +2,10 @@
 @import "base/_base";
 @import "base/_buttons";
 @import "base/_icons";
+@import "base/_social";
 
 @import "blocks/_menu-toggle";
-@import "blocks/_mobile-menu";
+// @import "blocks/_mobile-menu";
 //sections
 
  @import "sections/header"
