--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -38,9 +38,37 @@ html(lang="ru")
 		title !{title}
 		
 	body
+		//=======  right fixed social =========
+		.social-block-fixed
+			.social-block
+				a(href="#!").icon-email
+					img(src="./img/social/email.svg", alt="email")
+				a(href="#!").icon-vk
+					img(src="./img/social/vk.svg", alt="vk")
+				a(href="#!").icon-inst
+					img(src="./img/social/inst.svg", alt="inst")
+				a(href="#!").icon-tel
+					img(src="./img/social/app.svg", alt="app")
+				a(href="#!").icon-viber
+					img(src="./img/social/viber.svg", alt="viber")
+				a(href="#!").icon-tg
+					img(src="./img/social/tg.svg", alt="tg")
 		
 		block content
-		
-		
+			//=======  right fixed social =========
+			.social-block-fixed
+				.social-bloc
+					a(href="#!").icon-email
+						img(src="./img/social/email.svg", alt="email")
+					a(href="#!").icon-vk
+						img(src="./img/social/vk.svg", alt="vk")
+					a(href="#!").icon-inst
+						img(src="./img/social/inst.svg", alt="inst")
+					a(href="#!").icon-tel
+						img(src="./img/social/app.svg", alt="app")
+					a(href="#!").icon-viber
+						img(src="./img/social/viber.svg", alt="viber")
+					a(href="#!").icon-tg
+						img(src="./img/social/tg.svg", alt="tg")
 		//=============== мои скрипты ===================	
 		script(src="js/main.js")
