--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -18,8 +18,8 @@ header.header
 								use(href="./img/spriteSvg.svg#caret-down")
 			
 			//====== header-nav =========
-			.header-nav
-				ul.d-flex
+			.header-nav-desktop
+				ul
 					li
 						a(href="#!")  Производство<br> и&nbsp;печать
 					li
@@ -29,9 +29,47 @@ header.header
 					li
 						a(href="#!")  Контакты
 			.header-contacts.d-flex
-				a(href="tel:88007707419") 8 800 770 74 19
+				a(href="tel:88007707419").contact-link 8 800 770 74 19
 			
 			//====== mobile menu toggle =========
 			.header-burger
 				button#menu-toggle.menu-toggle
 					span
+			
+			//====== mobile menu =========
+			#mobile-menu.mobile-menu
+				.mobile-menu__content
+					//======== mob menu content=====
+					.mobile-menu__list
+						ul
+							li
+								a(href="#!")  Производство<br> и&nbsp;печать
+							li
+								a(href="#!")  Полезные статьи
+							li
+								a(href="#!")  Как заказать
+							li
+								a(href="#!")  Контакты
+					
+					//====== mob menu tel =====
+					.mobile-menu__contacts
+						a(href="tel:88007707419").contact-link 8 800 770 74 19
+						
+						//===== кругляшок горит зеленым, если есть класс active  у родителя .online-state
+						.online-state.d-flex-y.active
+							span.online-state__dot
+							span.online-state__text Сейчас онлайн
+					
+					.social-block
+						a(href="#!").icon-email
+							img(src="./img/social/email.svg", alt="email")
+						a(href="#!").icon-vk
+							img(src="./img/social/vk.svg", alt="vk")
+						a(href="#!").icon-inst
+							img(src="./img/social/inst.svg", alt="inst")
+						a(href="#!").icon-tel
+							img(src="./img/social/app.svg", alt="app")
+						a(href="#!").icon-viber
+							img(src="./img/social/viber.svg", alt="viber")
+						a(href="#!").icon-tg
+							img(src="./img/social/tg.svg", alt="tg")
