--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -33,6 +33,8 @@
   font-size: 15px;
   line-height: 1.2;
 	-webkit-font-smoothing: antialiased;
+  position: relative;
+  
 
   }
   .lock {
@@ -128,8 +130,27 @@ select:-webkit-autofill:focus {
 .d-flex-column{
   flex-direction: column;
 }
+.online-state{
+  column-gap: 8px;
+  margin-top: 6px;;
+  &__dot{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    flex-shrink: 0;
+    background-color: lightgrey;
+
+  }
+  &.active .online-state__dot{background-color: #00ff2e;}
+}
 /*========== TYPOGRAPHY ==========*/
 .h1{
   font-size: remy(40);
   font-family: var(--fontSemi);
+}
+.contact-link {
+  font-size: remy(20);
+}
+.online-state{
+   display: flex;
 }
