--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -5,13 +5,14 @@
 	background-color: var(--darkBg);
 	color:var(--lightText);
 	&-content{
+		
 		height: remy(78);
 		&>*{padding-top: 15px;}
-		&>*+* {
-			border-left: 1px solid rgb(61, 61, 61);
-		}
+		&>*+* {border-left: 1px solid rgb(61, 61, 61);}
+			
+		
 		@media (max-width:1023px) {
-			justify-content: space-between;
+			
 			align-items: center;
 			height: remy(70);
 			&>* {
@@ -31,16 +32,19 @@
 	&-contacts{
 		white-space: nowrap;
 		padding-left: remy(24);
-		font-size: remy(20);
 		flex-grow: 1;
 		text-align: right;
 		@media (max-width:1023px) {
 			display: none;
 		}
 	}
+		
 	&-burger{
 		display: none;
 		border-left: none;
+		width: remy(54);
+		margin-left: auto;
+		
 		@media (max-width:1023px) {
 			height: 100%;
 			display: flex;
@@ -63,17 +67,51 @@
 		color: var(--lightText);
 		margin-top: remy(7);
 		white-space: nowrap;
-				
-		
+		@media (max-width:767px) {
+			display: none;
+		}
 	}
 }
-.header-nav{
+.header-nav-desktop{
 	padding-inline: remy(20);
 	ul{
+		display: flex;
 		column-gap:remy(24);
 		flex-grow: 2;
 	}
 	@media (max-width:1023px) {
 		display: none;
+	}
+}
+.mobile-menu{
+	display: none;
+	width: 100%;
+	position: fixed;
+	inset:remy(70) 0 0;
+	z-index: 10;
+	background-color: rgba(255,255,255, .5);
+	backdrop-filter: blur(5px);
+	transform: translateX(100%);
+	transition: .3s; 
+   
+	
+	&__content{
+		background-color:var(--darkBg);
+		padding: remy(20) remy(30);
+		width: min(remy(240), 100%);
+		margin-left: auto;
+		&>*+*{margin-top: remy(45)}
+		
+	}
+	&__list{
+		max-width: remy(130);
+		li +li{margin-top: remy(30);}
+		
+	}
+
+	@media (max-width:1023px) {
+		display: flex;
+		&.active{transform: translateX(0);}
+		
 	}
 }
