--- a/src/pug/sections/_header-title.pug
+++ b/src/pug/sections/_header-title.pug
@@ -1,3 +1,36 @@
-//========== HEADER  TITLE ===========
-.header-title
-	h1.h1 Шейкер Боттл — Производитель  шейкеров в России оптом
+//========== HEADER  MAIN ===========
+.header-banner
+	//======== header title
+	.header-title
+		h1.h1 Шейкер Боттл — Производитель  шейкеров в России оптом
+	
+	//======== Наши модели ========
+	.shaker-models-wrapper
+		.container
+			.shaker-models.d-flex
+				p.txt-bold Наши модели
+				.shaker-models__type
+					//====== single item =======
+					.shaker-models__type-item
+						.shaker-model__name
+							span Шейкер
+							span С01
+						.shaker-model__vol 600 мл
+					//====== single item =======
+					.shaker-models__type-item
+						.shaker-model__name
+							span Шейкер
+							span С02
+						.shaker-model__vol 400 мл
+					//====== single item =======
+					.shaker-models__type-item
+						.shaker-model__name
+							span Шейкер
+							span С03
+						.shaker-model__vol 600 мл
+					//====== single item =======
+					.shaker-models__type-item
+						.shaker-model__name
+							span Шейкер
+							span С04
+						.shaker-model__vol 600 мл
