--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -27,7 +27,7 @@
 	margin: 0;
 	padding: 0;
 	width: 100%;
-  background-color: e2e2e2;
+  background-color: #e2e2e2;
   font-family: var(--font);
   color: var(--text);
   font-size: 15px;
