--- a/src/scss/sections/_header-title.scss
+++ b/src/scss/sections/_header-title.scss
@@ -2,3 +2,35 @@
 	padding-block: remy(45) remy(95);
 	.h1{width: min( remy(720), 80%);}
 }
+.shaker-models-wrapper{
+	padding-block: 20px;
+	background-color: #fff;
+	border-radius: remy(10);
+	.txt-bold{
+		font-size: 15px;
+		font-family: var(--fontBold);
+		margin-right: 20px;
+		padding-top: 8px;
+		
+	}
+}
+.shaker-models__type{
+	display: flex;
+	column-gap: remy(10);
+	margin-left: auto;
+	margin-left: auto;
+	
+	
+	&-item{
+		padding: remy(10);
+		border-radius: remy(10);
+		border: 1px solid #000000;
+		width: remy(200);
+		
+	}
+	.shaker-model__name{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+}
