--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -3,7 +3,7 @@ extends ../layouts/layout.pug
 block content
 	include ../sections/_header.pug
 	main.page-main
-		include ../sections/_header-title.pug
+		include ../sections/_header-banner.pug
 	
 block variables
-	-var title = "Page";
+	-var title = "Shaker";
