--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -148,9 +148,17 @@ select:-webkit-autofill:focus {
   font-size: remy(40);
   font-family: var(--fontSemi);
 }
+.txt-25{
+  font-size: 20px;
+  line-height: 1.3;
+  font-family: var(--fontSemi);
+}
 .contact-link {
   font-size: remy(20);
 }
 .online-state{
    display: flex;
+}
+.mb-20{
+  margin-bottom: 20px;
 }
