--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -26,6 +26,13 @@ html(lang="ru")
 				font-display: swap;
 			}
 			@font-face{
+				font-family: 'Montserrat-Medium';
+				src: url(./fonts/Montserrat-Medium.woff2) format("woff2");
+				font-weight: 500;
+				font-style: normal;
+				font-display: swap;
+			}
+			@font-face{
 				font-family: 'Montserrat-SemiBold';
 				src: url(./fonts/Montserrat-SemiBold.woff2) format("woff2");
 				font-weight: 600;
