--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -7,6 +7,7 @@
  --lightText: rgba(255,254,254,1);
  --darkBg: rgba(0, 0, 0, 1);
  --font: 'Montserrat';
+ --fontMedium: 'Montserrat-Medium';
  --fontSemi: 'Montserrat-SemiBold';
  --fontBold: 'Montserrat-Bold';
 }
