--- a/src/pug/sections/_header-banner.pug
+++ b/src/pug/sections/_header-banner.pug
@@ -1,11 +1,11 @@
 //========== HEADER  MAIN ===========
-.header-banner
+.header-banner.d-flex-column
 	//======== header title
 	.header-title
 		h1.h1 Шейкер Боттл — Производитель  шейкеров в России оптом
 	
 	//======== SHAKER MODELS ========
-	.shaker-models-wrapper.mb-20
+	.shaker-models-wrapper
 		.container
 			.shaker-models.d-flex
 				p.txt-bold Наши модели
@@ -46,7 +46,7 @@
 					.container
 						//======= slide text ========
 						a(href="#!").header-slider__title
-							p.txt-25 Ищете товар для продаж на&nbsp;wildberries?
+							p.txt-25 Ищете товар для продаж на wildberries?
 							span.arrow-link У нас есть
 
 					//======= slide bg image ========
