--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
 @import "base/_social";
 
 @import "blocks/_menu-toggle";
-// @import "blocks/_mobile-menu";
+@import "blocks/_swiper-slider";
 //sections
 
  @import "sections/header"
