--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -105,21 +105,21 @@ select:-webkit-autofill:focus {
 .page-main {
   width: min(1260px, 100%);
   margin-inline: auto;
-  padding-inline: remy(30);
+  padding-inline: 30px;
   @media (max-width: 767px) {
-      padding-inline: remy(10);
+      padding-inline: 10px;
   }
 }
 .container{
   width: min(1060px, 100%);
   margin-inline: auto;
-  padding-inline: remy(30);
+  padding-inline: 30px;
   @media (max-width: 767px) {
-      padding-inline: remy(10);
+      padding-inline: 20px;
   }
   
 }
-.d-flex, .d-flex-y,.d-flex-x, .d-flex-center,.d-column{
+.d-flex, .d-flex-y,.d-flex-x, .d-flex-center,.d-flex-column{
   display: flex;
 }
 .d-flex-y,.d-flex-center{
@@ -146,16 +146,22 @@ select:-webkit-autofill:focus {
 }
 /*========== TYPOGRAPHY ==========*/
 .h1{
-  font-size: remy(40);
+  font-size: 40px;
   font-family: var(--fontSemi);
+  @media (max-width: 1023px) {
+    font-size: 34px;
+  }
+  @media (max-width: 767px) {
+   font-size: 30px;
+  }
 }
 .txt-25{
-  font-size: 20px;
+  font-size: 25px;
   line-height: 1.3;
   font-family: var(--fontSemi);
 }
 .contact-link {
-  font-size: remy(20);
+  font-size: 20px;
 }
 .online-state{
    display: flex;
