--- a/src/scss/sections/_header-banner.scss
+++ b/src/scss/sections/_header-banner.scss
@@ -1,5 +1,5 @@
 .header-banner{
-	column-gap:20px;
+	row-gap:20px;
 	&>*{
 		width: 100%;
 		flex-shrink: 0;
@@ -7,13 +7,13 @@
 	@media (max-width: 1023px) {
 		padding-top: 10px;
 		column-gap: 10px;
-		.shaker-models-wrapper{display: none;}
+		
 		.header-title{
 			padding-block:25px;
 			order: 2;
 		}
 		.header-slider-wrapper{order: 1;}
-		.swiper-slide .container{padding-inline: 30px;}
+		.swiper-slide .container{padding-inline: 20px;}
 	}
 }
 .header-title{
@@ -21,8 +21,8 @@
 	.h1{width: min( 720px, 80%);}
 
 	@media (max-width: 767px) {
-	  padding-left: 20px;
-	  .h1 {width: min(480px, 100%);}
+	  padding-left: 10px;
+	  .h1 {width: min(480px, 95%);}
 	}
 }
 .shaker-models-wrapper{
@@ -32,23 +32,42 @@
 	.txt-bold{
 		font-size: 15px;
 		font-family: var(--fontBold);
-		margin-right: 20px;
+		margin-right: 50px;
 		padding-top: 8px;
+		flex-shrink: 0;
+	}
+	@media (max-width: 1023px) {
+		order:3;
+		.shaker-models{display: block;}
 		
+		.txt-bold{
+			margin-right: 0;
+			padding-top: 0;
+			margin-bottom: 15px;
+		}
 	}
 }
 .shaker-models__type{
-	display: flex;
-	column-gap: remy(10);
+	flex-grow: 1;
+	display: grid;
+	grid-template-columns: repeat(4, 200px);
+	gap: 10px;
 	margin-left: auto;
 	margin-left: auto;
-	
+	@media (max-width: 1119px) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	@media (max-width: 767px) {
+		grid-template-columns: repeat(1, 1fr);
+		row-gap:8px;
+	}
 	
 	&-item{
 		padding: remy(10);
 		border-radius: remy(10);
 		border: 1px solid #000000;
-		width: remy(200);
+		width: 100%;
+		max-width: 500px;
 		font-family: var(--fontMedium);
 		
 	}
@@ -75,7 +94,7 @@
 		@media (max-width: 767px) {
 			height: 400px;
 			padding-top: 215px;
-			&__image img{min-height: unset; height: 400px;}
+			&__image img{min-height: unset; height: 400px; }
 		}
 	}
 	&__title{
@@ -97,6 +116,8 @@
 		right: 0;
 		img{
 			min-height: 400px;
+			width: 100%;
+
 		}
 	}
 
@@ -112,7 +133,7 @@
 			padding-left: 30px;
 		}
 		@media (max-width: 767px) {
-			padding-left: 30px;
+			padding-left: 20px;
 			bottom: 20px;
 		}
 	}
