--- a/src/pug/sections/_header-banner.pug
+++ b/src/pug/sections/_header-banner.pug
@@ -46,7 +46,7 @@
 					.container
 						//======= slide text ========
 						a(href="#!").header-slider__title
-							p.txt-25 Ищете товар для продаж на wildberries?
+							p.title-25 Ищете товар для продаж на wildberries?
 							span.arrow-link У нас есть
 
 					//======= slide bg image ========
@@ -61,7 +61,7 @@
 					.container
 						//======= slide text ========
 						a(href="#!").header-slider__title
-							p.txt-25 Ограниченная серия со скидкой
+							p.title-25 Ограниченная серия со скидкой
 							span.arrow-link Смотреть
 							
 					//======= slide bg image ========
@@ -76,7 +76,7 @@
 					.container
 						//======= slide text ========
 						a(href="#!").header-slider__title
-							p.txt-25 Почему хороший шейкер не может стоить 60руб?
+							p.title-25 Почему хороший шейкер не может стоить 60руб?
 							span.arrow-link Читать в нашем блоге
 							
 					//======= slide bg image ========
