--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import "base/_buttons";
 @import "base/_icons";
 @import "base/_social";
+@import "base/_forms";
 
 @import "blocks/_menu-toggle";
 @import "blocks/_swiper-slider";
@@ -10,3 +11,4 @@
 
  @import "sections/header"
  ;@import "sections/header-banner";
+ @import "sections/steps";
