--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,6 +4,7 @@ block content
 	include ../sections/_header.pug
 	main.page-main
 		include ../sections/_header-banner.pug
+		include ../sections/_steps.pug
 	
 block variables
 	-var title = "Shaker";
