--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -148,6 +148,7 @@ select:-webkit-autofill:focus {
 .h1{
   font-size: 40px;
   font-family: var(--fontSemi);
+  font-weight: 600;
   @media (max-width: 1023px) {
     font-size: 34px;
   }
@@ -155,10 +156,20 @@ select:-webkit-autofill:focus {
    font-size: 30px;
   }
 }
-.txt-25{
+.title-25{
   font-size: 25px;
   line-height: 1.3;
   font-family: var(--fontSemi);
+  font-weight: 600;
+}
+.title-20,.title-15{
+  font-size: 20px;
+  line-height: 1.3;
+  font-family: var(--fontMedium);
+  font-weight: 500;
+}
+.title-15{
+  font-size: 15px;
 }
 .contact-link {
   font-size: 20px;
@@ -168,4 +179,14 @@ select:-webkit-autofill:focus {
 }
 .mb-20{
   margin-bottom: 20px;
+}
+.mt-20 {
+  margin-top: 20px;
+}
+.white-bg{
+  background-color: white;
+  border-radius: 20px;
+  @media (max-width: 767px) {
+    border-radius: 10px;
+  }
 }
