--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -18,7 +18,9 @@
     background-position: center;;
     
   }
-  
+    *:before, *:after{
+      box-sizing: border-box;
+    }
   html {
 	 scroll-behavior: smooth;
   }
