--- a/src/scss/sections/_steps.scss
+++ b/src/scss/sections/_steps.scss
@@ -4,6 +4,13 @@
 	&.active {
 		display: block;
 	}
+	&.active.d-flex{display: flex;}
+	&.d-flex{
+		&>.title-20{flex-shrink: 0;}
+	}
+	.constructor-form.d-flex{flex-grow: 1;padding-left: 50px;}
+	.constructor-form__display{flex-grow: 1;}
+	.constructor-form__options{width: 325px;flex-shrink: 0; }
 }
 .constructor{
 	padding-block: 30px;
@@ -55,4 +62,93 @@
 }
 .model-card-label input:checked + .model-card{
 	background-color: rgb(226, 226, 226);
+}
+.constructor-form__images{
+	position: relative;
+	flex-shrink: 0;
+	width: 270px;
+	height: 438px;
+	img{
+		position: absolute;
+		inset: 0;
+	}
+	.model-body, .model-cap, .model-snap{
+		z-index: 0;
+	}
+}
+.constructor-form__parts{
+	
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			grid-template-rows: repeat(2, 1fr);
+			grid-column-gap: 10px;
+			grid-row-gap: 10px;
+		
+	
+		.btn:first-child {
+			grid-area: 1 / 1 / 2 / 2;
+		}
+	
+		.btn:nth-child(2){
+			grid-area: 1 / 2 / 2 / 3;
+		}
+	
+		.btn:nth-child(3) {
+			grid-area: 1 / 3 / 2 / 4;
+		}
+	
+		.btn:nth-child(4) {
+			grid-area: 2 / 1 / 3 / 2;
+		}
+	
+		.btn:nth-child(5) {
+			grid-area: 2 / 2 / 3 / 4;
+		}
+	label{width: 100%;}
+	.btn{
+		
+		padding-inline: 20px;
+	}
+}
+.constructor-form__colors{
+	display: flex;
+	gap:20px;
+	flex-wrap: wrap;
+}
+.model-color{
+	width: 20px;
+	height: 20px;
+	transform: rotate(45deg);
+	&__item{
+		width: 100%;
+		height: 100%;
+		border-radius: 50%;
+		
+		position: relative;
+		&:after{
+			content:'';
+			position: absolute;
+			top:0;
+			left:0;
+			right: 0;
+			bottom: 0;
+			width: 20px;
+			height: 20px;
+			border: 1px solid #888888;
+			z-index: 3;
+			border-radius: inherit;
+		}
+		svg{
+			position: absolute;
+			width: 20px;
+			height: 20px;
+			top: -6px;
+			right: 0;
+			bottom: 0;
+			z-index: 2;
+		}
+	}
+}
+.model-color.model-color--current{
+	transform: rotate(45deg) scale(1.5);
 }
