--- a/src/pug/sections/_steps.pug
+++ b/src/pug/sections/_steps.pug
@@ -1,6 +1,9 @@
-mixin model-card(title, imgSrc, imgW)
+mixin model-card(title, imgSrc, imgW, chkd)
 	label.model-card-label.special-label
-		input(type="radio" name="shaker-model")
+		if chkd
+			input(type="radio" name="shaker-model" checked)
+		else
+			input(type="radio" name="shaker-model")
 		.model-card
 			span.item-info i
 			.model-card__img
@@ -8,16 +11,21 @@ mixin model-card(title, imgSrc, imgW)
 			p.title-15 Модель С0#{imgSrc} — #{title}00 мл
 
 
-mixin model-color(bgColor, svgColor)
+mixin model-color(bgColor, svgColor, chkd)
+	//======== один элемент =========
 	label.special-label.model-color&attributes(attributes)
-		input(type="radio" name="model-color")
+		if chkd
+			input(type="radio" name="model-color" checked)
+		else
+			input(type="radio" name="model-color")
+		//===== цвет, прописанный в background- левая половинка круга, а цвет, прописанный в color- правая половинка круга
 		.model-color__item(style="background: "+ bgColor+ "; color:"+ svgColor+ " ;")
 			svg
 				use(href="./img/spriteSvg.svg#color-part")
 //============= Consructor steps =============
 section.constructor.white-bg.mt-20
 	.container
-		#constructor-block
+		#constructor-block.constructor-block
 			.constructor-header.d-flex-y
 				h3.title-25.active(js-step-title) Шаг 1
 				h3.title-25(js-step-title) Шаг 2
@@ -25,10 +33,10 @@ section.constructor.white-bg.mt-20
 			//======= STEPS CONTENT =====
 			.constructor-body
 				//======= STEP 1 =====
-				.constructor-step(js-step-content)
+				.constructor-step.active(js-step-content)
 					p.title-20 Выберите модель
 					.constructor-step__cards
-						+model-card(6, 1, 92)
+						+model-card(6, 1, 92, 'chkd')
 						+model-card(4, 2, 87)
 						+model-card(6, 3, 92)
 						+model-card(4, 4, 87)
@@ -39,68 +47,90 @@ section.constructor.white-bg.mt-20
 							svg.angle-right
 								use(href="./img/spriteSvg.svg#angle-right")
 				//======= STEP 2 =====
-				.constructor-step.d-flex.active(js-step-content)
-					p.title-20 Выберите цвета деталей<br> и сделайте заказ
-					.constructor-form.d-flex
-						.constructor-form__display.d-flex-x
-							.constructor-form__images
-								img.model-base(src="./img/c01/c01_base.webp", width="270" alt="c01")
-								img.model-body(src="./img/c01/c01_body.webp", width="270" alt="c01")
-								img.model-cap(src="./img/c01/c01_cap_yellow.webp", width="270" alt="c01")
-								img.model-snap(src="./img/c01/c01_snap.webp", width="270" alt="c01")
-						
-						//====== OPTIONS ===============
-						.constructor-form__options
+				.constructor-step(js-step-content)
+					.constructor-step__row.d-flex
+						p.title-20 Выберите цвета деталей<br> и сделайте заказ
+						.constructor-form.d-flex
+							.constructor-form__display.d-flex-x
+								.constructor-form__images
+									img.model-base(src="./img/c01/c01_base.webp", width="270" alt="c01")
+									img.model-body(src="./img/c01/c01_body.webp", width="270" alt="c01")
+									img.model-cap(src="./img/c01/c01_cap_yellow.webp", width="270" alt="c01")
+									img.model-snap(src="./img/c01/c01_snap.webp", width="270" alt="c01")
 							
-							//====== PART ITEMS ===============
-							.constructor-form__parts
-								//======== single item =======
-								label.model-part.special-label
-									input(type="radio" name="model-part")
-									button.btn Клапан
+							//====== OPTIONS ===============
+							.constructor-form__options
+								
+								//====== PART ITEMS ===============
+								.constructor-form__parts
+									//======== single item =======
+									label.model-part.special-label
+										input(type="radio" name="model-part" checked)
+										span.btn-slim Клапан
+								
+									//======== single item =======
+									label.model-part.special-label
+										input(type="radio" name="model-part")
+										span.btn-slim Петля						
+									//======== single item =======
+									label.model-part.special-label
+										input(type="radio" name="model-part")
+										span.btn-slim Крышка
+								
+									//======== single item =======
+									label.model-part.special-label
+										input(type="radio" name="model-part")
+										span.btn-slim Стакан							
+									//======== single item =======
+									label.model-part.special-label
+										input(type="radio" name="model-part")
+										button.btn-slim Печать на стакане
+								
+								//==========COLOR PALETTE =======
+								.constructor-form__colors-block
+									//======== Выбранные цвета =====
+									p.txt-bold#output-color
+										span.color-first Белый
+										span -
+										span.color-second Белый
+									
+									//======== Палитра цветов =====
+									.constructor-form__colors
+										+model-color('white', 'white', 'chkd')(class="model-color--current")
+										+model-color('#f6e13c', 'white')
+										+model-color('#f99827', 'white')
+										+model-color('#e4476a', 'white')
+										+model-color('#79cb37', 'white')
+										+model-color('#78b1e0', '#78b1e0')
+										+model-color('#fec83c', '#f6e13c')
+										+model-color('#000000', '#f6e13c')
+										+model-color('#79cb37', '#79cb37')
+										+model-color('#ea2128', '#ea2128')
+										+model-color('#653797', '#653797')
+										+model-color('#ffffff', '#000000')
+										+model-color('#78b1e0', '#000000')
+										+model-color('#f6e13c', '#000000')
+										+model-color('#f99827', '#000000')
+										+model-color('#f6e13c', 'white')
+										+model-color('#f99827', 'white')
+										+model-color('#e4476a', 'white')
+										+model-color('#79cb37', 'white')
+										+model-color('#78b1e0', '#78b1e0')
+										+model-color('#fec83c', '#f6e13c')
+										+model-color('#000000', '#f6e13c')
+										+model-color('#79cb37', '#79cb37')
+										+model-color('#ea2128', '#ea2128')
+
+			
+					//====== buttons block =======
+					.constructor-step__footer.d-flex-y
+						button.btn(type="button" onclick="viewConsructorPrevStep()")
+							svg.angle-left
+								use(href="./img/spriteSvg.svg#angle-right")
+							span Выбрать модель
 							
-								//======== single item =======
-								label.model-part.special-label
-									input(type="radio" name="model-part")
-									button.btn Петля						
-								//======== single item =======
-								label.model-part.special-label
-									input(type="radio" name="model-part")
-									button.btn Крышка
-							
-								//======== single item =======
-								label.model-part.special-label
-									input(type="radio" name="model-part")
-									button.btn Стакан							
-								//======== single item =======
-								label.model-part.special-label
-									input(type="radio" name="model-part")
-									button.btn Печать на стакане
-							
-							
-							
-							.constructor-form__colors
-								+model-color('white', 'white')(class="model-color--current")
-								+model-color('#f6e13c', 'white')
-								+model-color('#f99827', 'white')
-								+model-color('#e4476a', 'white')
-								+model-color('#79cb37', 'white')
-								+model-color('#78b1e0', '#78b1e0')
-								+model-color('#fec83c', '#f6e13c')
-								+model-color('#000000', '#f6e13c')
-								+model-color('#79cb37', '#79cb37')
-								+model-color('#ea2128', '#ea2128')
-								+model-color('#653797', '#653797')
-								+model-color('#ffffff', '#000000')
-								+model-color('#78b1e0', '#000000')
-								+model-color('#f6e13c', '#000000')
-								+model-color('#f99827', '#000000')
-								+model-color('#f6e13c', 'white')
-								+model-color('#f99827', 'white')
-								+model-color('#e4476a', 'white')
-								+model-color('#79cb37', 'white')
-								+model-color('#78b1e0', '#78b1e0')
-								+model-color('#fec83c', '#f6e13c')
-								+model-color('#000000', '#f6e13c')
-								+model-color('#79cb37', '#79cb37')
-								+model-color('#ea2128', '#ea2128')
+
+						a(href="#!").btn(type="button")
+							span Заказать
+							svg.angle-right
+								use(href="./img/spriteSvg.svg#angle-right")
