--- a/src/scss/sections/_steps.scss
+++ b/src/scss/sections/_steps.scss
@@ -1,14 +1,20 @@
 .constructor-step {
 	display: none;
-
+	opacity:0 ;
 	&.active {
 		display: block;
+		animation-name: slowOpacity;
+		animation-duration: .3s;
+		animation-timing-function: linear;
+		animation-fill-mode: forwards;
+		animation-delay: .2s;
+
 	}
-	&.active.d-flex{display: flex;}
-	&.d-flex{
+	
+	&__row.d-flex{
 		&>.title-20{flex-shrink: 0;}
 	}
-	.constructor-form.d-flex{flex-grow: 1;padding-left: 50px;}
+	.constructor-form.d-flex{flex-grow: 1;padding-left: 70px; margin-top: -30px;}
 	.constructor-form__display{flex-grow: 1;}
 	.constructor-form__options{width: 325px;flex-shrink: 0; }
 }
@@ -18,10 +24,20 @@
 .constructor-header{
 	
 	column-gap: 25px;
-	margin-bottom: 16px;
+	margin-bottom: 8px;
 	.title-25{opacity: 0.3; transition: .3s; }
 	.title-25.active {opacity: 1;}
 	
+}
+.constructor-block{
+	position: relative;
+	
+}
+.constructor-footer{
+	position: absolute;
+	bottom: 30px;
+	left: 30px;
+	right: 30px;
 }
 .constructor-step{
 	.title-20{margin-bottom: 15px;}
@@ -54,7 +70,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		margin-bottom: 15px;
+		margin-bottom: 9px;
 	}
 	&:hover{
 		background-color: rgba(226, 226, 226, 0.5);
@@ -77,48 +93,59 @@
 	}
 }
 .constructor-form__parts{
-	
-			display: grid;
-			grid-template-columns: repeat(3, 1fr);
-			grid-template-rows: repeat(2, 1fr);
-			grid-column-gap: 10px;
-			grid-row-gap: 10px;
-		
-	
-		.btn:first-child {
-			grid-area: 1 / 1 / 2 / 2;
-		}
-	
-		.btn:nth-child(2){
-			grid-area: 1 / 2 / 2 / 3;
-		}
-	
-		.btn:nth-child(3) {
-			grid-area: 1 / 3 / 2 / 4;
-		}
-	
-		.btn:nth-child(4) {
-			grid-area: 2 / 1 / 3 / 2;
-		}
-	
-		.btn:nth-child(5) {
-			grid-area: 2 / 2 / 3 / 4;
-		}
-	label{width: 100%;}
-	.btn{
-		
-		padding-inline: 20px;
+	margin-bottom: 30px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	grid-column-gap: 10px;
+	grid-row-gap: 10px;
+	.model-part:first-child {
+		grid-area: 1 / 1 / 2 / 2;
 	}
+
+	.model-part:nth-child(2){
+		grid-area: 1 / 2 / 2 / 3;
+	}
+
+	.model-part:nth-child(3) {
+		grid-area: 1 / 3 / 2 / 4;
+	}
+
+	.model-part:nth-child(4) {
+		grid-area: 2 / 1 / 3 / 2;
+	}
+
+	.model-part:nth-child(5) {
+		grid-area: 2 / 2 / 3 / 4;
+	}
+	.model-part{
+		width: 100%;
+
+		.btn-slim{
+			width: 100%;
+			padding-inline: 20px;
+			pointer-events: none;
+		}
+		input:checked + .btn-slim{
+			background-color: var(--darkBg);
+			color: white;
+		}
+	}
+}
+.constructor-form__colors-block{
+	.txt-bold{margin-bottom: 16px;}
 }
 .constructor-form__colors{
 	display: flex;
 	gap:20px;
 	flex-wrap: wrap;
+	padding-left: 5px;
 }
 .model-color{
 	width: 20px;
 	height: 20px;
 	transform: rotate(45deg);
+	transition: .3s; 
 	&__item{
 		width: 100%;
 		height: 100%;
@@ -134,16 +161,16 @@
 			bottom: 0;
 			width: 20px;
 			height: 20px;
-			border: 1px solid #888888;
+			border: 1px solid #999;
 			z-index: 3;
 			border-radius: inherit;
 		}
 		svg{
 			position: absolute;
-			width: 20px;
-			height: 20px;
-			top: -6px;
-			right: 0;
+			width: 18px;
+			height: 19px;
+			top: -4px;
+			right: 1.5px;
 			bottom: 0;
 			z-index: 2;
 		}
@@ -152,3 +179,4 @@
 .model-color.model-color--current{
 	transform: rotate(45deg) scale(1.5);
 }
+.constructor-step__footer{justify-content: space-between;}
