--- a/src/scss/sections/_steps.scss
+++ b/src/scss/sections/_steps.scss
@@ -13,13 +13,55 @@
 	
 	&__row.d-flex{
 		&>.title-20{flex-shrink: 0;}
+		@media (max-width: 1023px) {
+			flex-direction: column;
+			
+		}
 	}
-	.constructor-form.d-flex{flex-grow: 1;padding-left: 70px; margin-top: -30px;}
+	.constructor-form.d-flex{
+		flex-grow: 1;padding-left: 70px; margin-top: -30px;
+		@media (max-width: 1199px) {
+			padding-left: 40px;
+		}
+		@media (max-width: 1023px) {
+			flex-direction: column;
+			margin-top: 0;
+			#output-color{display: none;}
+		}
+		@media (max-width: 767px) {
+			padding-left: 0;
+			
+		}
+	}
 	.constructor-form__display{flex-grow: 1;}
-	.constructor-form__options{width: 325px;flex-shrink: 0; }
+	.constructor-form__options{
+		width: 325px;flex-shrink: 0; 
+		@media (max-width: 1023px) {
+			width: 100%;
+			display: flex;
+			flex-direction: row-reverse;
+			align-items: flex-start;
+			column-gap: 30px;
+			margin-top: 30px;
+		}
+		@media (max-width: 767px) {
+			flex-direction: column-reverse;
+			padding-top: 10px;
+			padding-bottom: 15px;
+			border-top: 1px solid #b1b1b1;
+			border-bottom: 1px solid #b1b1b1;
+		}
+	}
 }
 .constructor{
 	padding-block: 30px;
+	@media (max-width: 767px) {
+		padding-block: 20px;
+		border-radius: 0;
+		margin-left: -10px;
+		margin-right: -10px;
+		padding-inline: 10px;
+	}
 }
 .constructor-header{
 	
@@ -45,11 +87,24 @@
 .constructor-step__button{
 	display: flex;
 	justify-content: flex-end;
+	@media (max-width: 767px) {
+	 justify-content: center;
+	}
 }
 .constructor-step__cards{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	gap:10px;
+	@media (max-width: 1023px) {
+	  grid-template-columns: 1fr 1fr;
+	  gap: 30px;
+	.model-card{
+		width: min(100%, 100%);
+	  }
+	}
+	@media (max-width: 767px) {
+	   gap: 10px;
+	}
 }
 .model-card{
 	position: relative;
@@ -71,6 +126,14 @@
 		justify-content: center;
 		align-items: center;
 		margin-bottom: 9px;
+		@media (max-width: 767px) {
+			height: 140px;
+			img{
+				height: 130px;
+				width: 60px;
+				object-fit: contain;
+			}
+		}
 	}
 	&:hover{
 		background-color: rgba(226, 226, 226, 0.5);
@@ -79,17 +142,38 @@
 .model-card-label input:checked + .model-card{
 	background-color: rgb(226, 226, 226);
 }
+.constructor-form__display{
+	position: relative;
+	
+	.step-one-result{
+		display: none;
+		font-family: va(--fontMedium);
+		font-weight: 500;
+		@media (max-width: 767px) {
+		display: block;
+		position: absolute;
+		bottom: -14px;
+		left: 0;
+		}
+	}
+}
 .constructor-form__images{
 	position: relative;
 	flex-shrink: 0;
 	width: 270px;
-	height: 438px;
+	aspect-ratio: 45 / 73;
 	img{
 		position: absolute;
 		inset: 0;
+		width: 100%;
+		height: 100%;
+		object-fit:contain;
 	}
 	.model-body, .model-cap, .model-snap{
 		z-index: 0;
+	}
+	@media (max-width: 767px) {
+	   height: 230px;
 	}
 }
 .constructor-form__parts{
@@ -123,7 +207,7 @@
 
 		.btn-slim{
 			width: 100%;
-			padding-inline: 20px;
+			
 			pointer-events: none;
 		}
 		input:checked + .btn-slim{
@@ -131,15 +215,33 @@
 			color: white;
 		}
 	}
+	@media (max-width: 767px) {
+	    margin-bottom: 0;
+	}
 }
 .constructor-form__colors-block{
 	.txt-bold{margin-bottom: 16px;}
+	@media (max-width: 767px) {
+		overflow-x: auto;
+		scrollbar-width: none;
+		width: calc(50% + 50vw - 10px);
+		&::-webkit-scrollbar{
+			display: none;
+		}
+	}
 }
 .constructor-form__colors{
 	display: flex;
 	gap:20px;
 	flex-wrap: wrap;
 	padding-left: 5px;
+	padding-top: 10px;
+	@media (max-width: 767px) {
+	  flex-wrap: nowrap;
+	  width: 100%;
+	  margin-bottom: 20px;
+	.model-color{flex-shrink: 0;}
+	}
 }
 .model-color{
 	width: 20px;
@@ -179,4 +281,18 @@
 .model-color.model-color--current{
 	transform: rotate(45deg) scale(1.5);
 }
-.constructor-step__footer{justify-content: space-between;}
+.constructor-step__footer{
+	justify-content: space-between;
+	margin-top: -50px;
+	@media (max-width: 1023px) {
+		margin-top: 30px;
+	}
+	@media (max-width: 767px) {
+		margin-top: 20px;
+		justify-content: center;
+		column-gap:30px;
+		.btn{
+			padding-inline: 10px;
+		}
+	}
+}
