--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,6 +5,7 @@ block content
 	main.page-main
 		include ../sections/_header-banner.pug
 		include ../sections/_steps.pug
+		include ../sections/_video-preview.pug
 	
 block variables
 	-var title = "Shaker";
