--- a/src/pug/sections/_steps.pug
+++ b/src/pug/sections/_steps.pug
@@ -23,7 +23,7 @@ mixin model-color(bgColor, svgColor, chkd)
 			svg
 				use(href="./img/spriteSvg.svg#color-part")
 //============= Consructor steps =============
-section.constructor.white-bg.mt-20
+section.constructor.white-bg.mt-30
 	.container
 		#constructor-block.constructor-block
 			.constructor-header.d-flex-y
@@ -132,7 +132,7 @@ section.constructor.white-bg.mt-20
 							span Выбрать модель
 							
 
-						a(href="#!").btn(type="button")
+						a(href="#!").btn
 							span Заказать
 							svg.angle-right
 								use(href="./img/spriteSvg.svg#angle-right")
