--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -188,6 +188,9 @@ select:-webkit-autofill:focus {
 .mt-20 {
   margin-top: 20px;
 }
+.mt-30 {
+  margin-top: 30px;
+}
 .white-bg{
   background-color: white;
   border-radius: 20px;
