--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -41,3 +41,15 @@
 .angle-left{
 	transform: rotate(180deg);
 }
+.play-icon{
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor:pointer;
+	.svg-play{
+		width: 50px;
+		height: 50px;
+		color: var(--lightText);
+	}
+}
