--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,6 +6,7 @@ block content
 		include ../sections/_header-banner.pug
 		include ../sections/_steps.pug
 		include ../sections/_video-preview.pug
+		include ../sections/_review.pug
 	
 block variables
 	-var title = "Shaker";
