--- a/src/pug/sections/_header-banner.pug
+++ b/src/pug/sections/_header-banner.pug
@@ -86,10 +86,10 @@
 							source(srcset="./img/header-slider/s3-desktop.webp")
 							img(srcset="./img/header-slider/s3-desktop.webp", alt="img")
 
-			button.swiper-button-next
+			.swiper-button-next
 				svg
 					use(href="./img/spriteSvg.svg#caret-right")
-			button.swiper-button-prev
+			.swiper-button-prev
 				svg
 					use(href="./img/spriteSvg.svg#caret-left")
 			
