--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -147,7 +147,7 @@ select:-webkit-autofill:focus {
   &.active .online-state__dot{background-color: #00ff2e;}
 }
 /*========== TYPOGRAPHY ==========*/
-.h1{
+.h1, .h2{
   font-size: 40px;
   font-family: var(--fontSemi);
   font-weight: 600;
@@ -196,6 +196,14 @@ select:-webkit-autofill:focus {
   border-radius: 20px;
   @media (max-width: 767px) {
     border-radius: 10px;
+  }
+}
+.section-title{
+  padding-top: 90px;
+  padding-bottom: 50px;
+  @media (max-width: 767px) {
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 }
 @keyframes slowOpacity{
