--- a/src/scss/sections/_review.scss
+++ b/src/scss/sections/_review.scss
@@ -1,7 +1,7 @@
 .review-slider{
 	padding-bottom: 60px;
 	.swiper-slide{
-		height: 100%;
+		height: unset;
 		display: flex;
 	}
 	.swiper-pagination{
