--- a/src/pug/sections/_steps.pug
+++ b/src/pug/sections/_steps.pug
@@ -33,27 +33,27 @@ section.constructor.white-bg.mt-30
 			//======= STEPS CONTENT =====
 			.constructor-body
 				//======= STEP 1 =====
-				.constructor-step.active(js-step-content)
+				.constructor-frame.active(js-step-content)
 					p.title-20 Выберите модель
-					.constructor-step__cards
+					.constructor-frame__cards
 						+model-card(6, 1, 92, 'chkd')
 						+model-card(4, 2, 87)
 						+model-card(6, 3, 92)
 						+model-card(4, 4, 87)
 					
-					.constructor-step__button.mt-20
+					.constructor-frame__button.mt-20
 						button.btn(type="button" onclick="viewConsructorNextStep()")
 							span Выбрать цвет
 							svg.angle-right
 								use(href="./img/spriteSvg.svg#angle-right")
 				//======= STEP 2 =====
-				.constructor-step(js-step-content)
-					.constructor-step__row.d-flex
+				.constructor-frame(js-step-content)
+					.constructor-frame__row.d-flex
 						p.title-20 Выберите цвета деталей<br> и сделайте заказ
 						.constructor-form.d-flex
 							//========= Images Block ========
 							.constructor-form__display.d-flex-x
-								p.step-one-result С01 <br>600 мл
+								p.current-model-name С01 <br>600 мл
 								.constructor-form__images
 									img.model-base(src="./img/c01/c01_base.webp", width="270" alt="c01")
 									img.model-body(src="./img/c01/c01_body.webp", width="270" alt="c01")
@@ -125,7 +125,7 @@ section.constructor.white-bg.mt-30
 
 			
 					//====== buttons block =======
-					.constructor-step__footer.d-flex-y
+					.constructor-frame__footer.d-flex-y
 						button.btn(type="button" onclick="viewConsructorPrevStep()")
 							svg.angle-left
 								use(href="./img/spriteSvg.svg#angle-right")
