--- a/src/pug/sections/_constructor.pug
+++ b/src/pug/sections/_constructor.pug
@@ -35,7 +35,7 @@ mixin model-color(bgColor, svgColor, chkd)
 			svg
 				use(href="./img/spriteSvg.svg#color-part")
 //============= Consructor steps =============
-section.constructor.white-bg.mt-30
+section.constructor.constructor-minimize.white-bg.mt-30
 	.container
 		.constructor-block.d-flex
 			//======= левая колонка =====
