--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -191,6 +191,7 @@ select:-webkit-autofill:focus {
 .mt-30 {
   margin-top: 30px;
 }
+.mt-auto{margin-top: auto;}
 .white-bg{
   background-color: white;
   border-radius: 20px;
